# real-time-intent-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: docker-compose.yml
policies/: ecommerce.rego
scripts/: generate_clickstream.py  train_model.py
src/: config.py  main.py
src/api/routes/: actions.py  customers.py  events.py  health.py  intents.py  sessions.py
src/execution/: dispatcher.py  ledger.py  suppressor.py
src/governance/: business_rules.py  opa_client.py
src/ingestion/: event_store.py  kafka_consumer.py  kafka_producer.py
src/memory/: customer_profile.py  session_store.py
src/models/: actions.py  customer.py  events.py  features.py  intent.py
src/observability/: logging.py  metrics.py
src/perception/: feature_engineer.py  session_window.py
src/reasoning/: markov_model.py  ml_ensemble.py  rule_classifier.py  slm_enrichment.py
tests/: conftest.py  test_action_dispatch.py  test_api.py  test_event_ingestion.py  test_feature_engineering.py  test_governance.py  test_integration.py  test_intent_classification.py  test_kafka.py  test_markov_chain.py
